--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
           <div class="skills__item">
             <h3 class="skills__title">Photoshop</h3>
             <p class="skills__description">2 Years Experience</p>
+            <p class="skills__description">&nbsp;</p>
+            <p class="skills__description">&nbsp;</p>
+            <p class="skills__description">&nbsp;</p>
           </div>
         </div>
         <img
