--- a/src/contact.html
+++ b/src/contact.html
@@ -19,6 +19,7 @@
     <title>Frontend Mentor | Single-page developer portfolio</title>
   </head>
   <body>
+    <form action="send_email.php" class="contact__form" method="POST">
     <header class="header">
       <h2 class="visually-hidden">Header</h2>
       <div class="wrapper">
