--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,13 @@
     <title>Frontend Mentor | Single-page developer portfolio</title>
   </head>
   <body>
-    <form action="send_email.php" class="contact__form" method="POST">
+    
     <header class="header">
       <h2 class="visually-hidden">Header</h2>
       <div class="wrapper">
         <nav class="header__nav">
           <h2 class="visually-hidden">Navigation</h2>
+          <form action="send_email.php" class="contact__form" method="POST"></form>
           <a href="/" class="header__home">
             Tamir Eilon
             <span class="visually-hidden">(to home page)</span>
@@ -122,7 +123,7 @@
               to be part of your journey - please reach out!
             </p>
           </div>
-          <form action="" class="contact__form">
+          <form action="send_email.php" class="contact__form">
             <div class="contact__control">
               <label for="name" class="visually-hidden">Name</label>
               <input
