changed the current main page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href=""
     />
     <link rel="stylesheet" href="style.css" />
     <title>Welcome!</title>
@@ -178,17 +178,17 @@
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
-                  srcset="/assets/images/thumbnail-project-1-large.webp"
+                  srcset="/assets/images/example_image.jpg"
                 />
                 <img
                   class="projects__image"
-                  src="/assets/images/thumbnail-project-1-small.webp"
+                  src="/assets/images/example_image.jpg"
                   alt="screenshot of design portfolio website"
                   width-="343"
                   height="253"
                 />
               </picture>
-              <h3 class="projects__name">Design Portfolio</h3>
+              <h3 class="projects__name">Example #1</h3>
               <p class="projects__tags">
                 <span>HTML</span>
                 <span>CSS</span>
@@ -203,17 +203,17 @@
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
-                  srcset="/assets/images/thumbnail-project-2-large.webp"
+                  srcset="/assets/images/example_image.jpg"
                 />
                 <img
                   class="projects__image"
-                  src="/assets/images/thumbnail-project-2-small.webp"
+                  src="/assets/images/example_image.jpg"
                   alt="screenshot of learning platform website with different courses"
                   width-="343"
                   height="253"
                 />
               </picture>
-              <h3 class="projects__name">E-Learning Landing Page</h3>
+              <h3 class="projects__name">Example #2</h3>
               <p class="projects__tags">
                 <span>HTML</span>
                 <span>CSS</span>
@@ -228,17 +228,17 @@
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
-                  srcset="/assets/images/thumbnail-project-3-large.webp"
+                  srcset="/assets/images/example_image.jpg"
                 />
                 <img
                   class="projects__image"
-                  src="/assets/images/thumbnail-project-3-small.webp"
+                  src="/assets/images/example_image.jpg"
                   alt="screenshot of To Do App showing a list of active and complete tasks"
                   width-="343"
                   height="253"
                 />
               </picture>
-              <h3 class="projects__name">Todo Web App</h3>
+              <h3 class="projects__name">Example #3</h3>
               <p class="projects__tags">
                 <span>HTML</span>
                 <span>CSS</span>
@@ -254,17 +254,17 @@
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
-                  srcset="/assets/images/thumbnail-project-4-large.webp"
+                  srcset="/assets/images/example_image.jpg"
                 />
                 <img
                   class="projects__image"
-                  src="/assets/images/thumbnail-project-4-small.webp"
+                  src="/assets/images/example_image.jpg"
                   alt="screenshot of video player app with grid of thumbnails of movies and TV shows"
                   width-="343"
                   height="253"
                 />
               </picture>
-              <h3 class="projects__name">Entertainment Web App</h3>
+              <h3 class="projects__name">Example #4</h3>
               <p class="projects__tags">
                 <span>HTML</span>
                 <span>CSS</span>
@@ -276,57 +276,6 @@
               </div>
             </div>
 
-            <div class="projects__item">
-              <picture class="projects__picture">
-                <source
-                  media="(min-width: 62.5em)"
-                  srcset="/assets/images/thumbnail-project-5-large.webp"
-                />
-                <img
-                  class="projects__image"
-                  src="/assets/images/thumbnail-project-5-small.webp"
-                  alt="screenshot of 4-player memory game with circular tiles that have symbols"
-                  width-="343"
-                  height="253"
-                />
-              </picture>
-              <h3 class="projects__name">Memory Game</h3>
-              <p class="projects__tags">
-                <span>HTML</span>
-                <span>CSS</span>
-                <span>JavaScript</span>
-              </p>
-              <div class="projects__links">
-                <a href="" class="underline">View Project</a>
-                <a href="" class="underline">View Code</a>
-              </div>
-            </div>
-
-            <div class="projects__item">
-              <picture class="projects__picture">
-                <source
-                  media="(min-width: 62.5em)"
-                  srcset="/assets/images/thumbnail-project-6-large.webp"
-                />
-                <img
-                  class="projects__image"
-                  src="/assets/images/thumbnail-project-6-small.webp"
-                  alt="grid of thumbnails of famous works of art"
-                  width-="343"
-                  height="253"
-                />
-              </picture>
-              <h3 class="projects__name">Art Gallery Showcase</h3>
-              <p class="projects__tags">
-                <span>HTML</span>
-                <span>CSS</span>
-                <span>JavaScript</span>
-              </p>
-              <div class="projects__links">
-                <a href="" class="underline">View Project</a>
-                <a href="" class="underline">View Code</a>
-              </div>
-            </div>
             <div class="contact">
                 <a href="assets/Files for download/resume 2023 updated 20.5.23 - pdf.pdf" class="hero__contact underline">Download Resume</a>
               </div>
