--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
             <picture>
               <source
                 media="(min-width: 62.5em)"
-                srcset="assets/images/EFC0F9F8-A32C-46B2-A4CC-B067146D7A6B_1_105_c.jpeg"
+                srcset="assets/images/memoji.png"
               />
               <source
                 media="(min-width: 37.5em)"
-                srcset="assets/images/EFC0F9F8-A32C-46B2-A4CC-B067146D7A6B_1_105_c.jpeg"
+                srcset="assets/images/memoji.png"
               />
               <img
                 class="hero__image"
-                src="assets/images/EFC0F9F8-A32C-46B2-A4CC-B067146D7A6B_1_105_c.jpeg"
+                src="assets/images/memoji.png"
                 alt="picture of Tamir Eilon"
                 width-="174"
                 height="383"
@@ -142,10 +142,6 @@
           </div>
           <div class="skills__item">
             <h3 class="skills__title">Linux</h3>
-            <p class="skills__description">2 Years Experience</p>
-          </div>
-          <div class="skills__item">
-            <h3 class="skills__title">Photoshop</h3>
             <p class="skills__description">2 Years Experience</p>
             <p class="skills__description">&nbsp;</p>
             <p class="skills__description">&nbsp;</p>
