--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 I'm <span>Tamir</span>.
               </h1>
               <p class="hero__description">
-                Based in Israel, I'm an upcoming graphic designer and a DevOps developer,
+                Based in Israel, I'm an upcoming graphic designer and a DevOps engineer,
                 building innovating UIs and helping companies reach their full potential.
               </p>
               <a href="contact.html" class="hero__contact underline">Contact me</a>
