--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
           <div class="contact__text">
             <h2 class="contact__headline header-xl"></h2>
             <p class="contact__description">
-              As an amatur graphic designer and a junior DevOps developer, the job-hunt is always
+              As an amatur graphic designer and a junior DevOps engineer, the job-hunt is always
               happening. If you have a project, and a vision in mind, I would love
               to be part of your journey - please reach out!
             </p>
