--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Frontend Mentor | Single-page developer portfolio</title>
+    <title>CONTACT</title>
   </head>
   <body>
     
