--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href=""
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Welcome!</title>
+    <title>HOME</title>
   </head>
   <body>
     <header class="header">
