Updating project sector

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 I'm <span>Tamir</span>.
               </h1>
               <p class="hero__description">
-                Based in Israel, I'm an upcoming graphic designer and a DevOps engineer,
-                building innovating UIs and helping companies reach their full potential.
+                Based in Israel, I'm an upcoming DevOps Developer and a Graphic Designer,
+                creating innovating CI/CDs and helping companies reach their full potential.
               </p>
               <a href="contact.html" class="hero__contact underline">Contact me</a>
             </div>
@@ -133,12 +133,16 @@
         <div class="wrapper skills__wrapper bottom-border">
           <h2 class="visually-hidden">Skills</h2>
           <div class="skills__item">
+            <h3 class="skills__title">Python</h3>
+            <p class="skills__description">2 Years Experience</p>
+          </div>
+          <div class="skills__item">
             <h3 class="skills__title">HTML</h3>
             <p class="skills__description">1 Years Experience</p>
           </div>
           <div class="skills__item">
-            <h3 class="skills__title">CSS</h3>
-            <p class="skills__description">1 Years Experience</p>
+            <h3 class="skills__title">Cloud</h3>
+            <p class="skills__description">2 Years Experience</p>
           </div>
           <div class="skills__item">
             <h3 class="skills__title">Linux</h3>
@@ -174,24 +178,26 @@
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
-                  srcset="/assets/images/example_image.jpg"
+                  srcset=""
                 />
                 <img
                   class="projects__image"
-                  src="/assets/images/example_image.jpg"
+                  src="/assets/images/Screenshot 2023-09-05 at 16.07.16.png"
                   alt="screenshot of design portfolio website"
                   width-="343"
                   height="253"
                 />
               </picture>
-              <h3 class="projects__name">Example #1</h3>
+              <h3 class="projects__name">Portfolio Website</h3>
               <p class="projects__tags">
                 <span>HTML</span>
                 <span>CSS</span>
+                <span>K8S</span>
+                <span>GCP</span>
+                <span>Docker</span>
               </p>
               <div class="projects__links">
-                <a href="" class="underline">View Project</a>
-                <a href="" class="underline">View Code</a>
+                <a href="https://github.com/TamirEilon/PortfolioWebsite" class="underline">View Code</a>
               </div>
             </div>
 
@@ -273,7 +279,7 @@
             </div>
 
             <div class="contact">
-                <a href="assets/Files for download/resume 2023 updated 20.5.23 - pdf.pdf" class="hero__contact underline">Download Resume</a>
+                <a href="assets/Files for download/updated resume - PDF.pdf" class="hero__contact underline">Download Resume</a>
               </div>
           </div>
         </div>
