FIxed contact form - minor

--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
               to be part of your journey - please reach out!
             </p>
           </div>
-          <form action="send_email.php" class="contact__form">
+          <form action="https://formspree.io/f/meqbkvbd"  method="post" class="contact__form">
             <div class="contact__control">
               <label for="name" class="visually-hidden">Name</label>
               <input
