--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             </div>
 
             <div class="contact">
-                <a href="assets/Files for download/updated resume - PDF.pdf" class="hero__contact underline">Download Resume</a>
+                <a href="assets/Files for download/updated resume 2023 - PDF.pdf" class="hero__contact underline">Download Resume</a>
               </div>
           </div>
         </div>
